Reformatted to use a different api TODO: use api in server

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Simple Weather",
+  "name": "Simple-Weather",
   "version": "1.0.0",
   "private": true,
   "description": "A simple weather demo app",
